--- a/index.html
+++ b/index.html
@@ -375,21 +375,21 @@
                     <div class="foot">
                         <ul class="foot-ul">
                             <li class="foot-li">Address</li>
-                            <li class="foot-li li3"><a class="foot-a" href="">A-606 Bestech Business <br> Towers, Sector 66, Mohali</a></li>
+                            <li class="foot-li li3"><a class="foot-a" href="https://goo.gl/maps/aMa3LDDXDtYzFejP8">A-606 Bestech Business <br> Towers, Sector 66, Mohali</a></li>
                             
                         </ul>
                     </div>
                     <div class="foot">
                         <ul class="foot-ul">
                             <li class="foot-li">Email</li>
-                            <li class="foot-li li3"><a class="foot-a" href="#">info@ratiocinativesolutions.com</a></li>
+                            <li class="foot-li li3"><a class="foot-a" href="mailto:info@ratiocinativesolutions.com">info@ratiocinativesolutions.com</a></li>
                             
                         </ul>
                     </div>
                     <div class="foot">
                         <ul class="foot-ul">
                             <li class="foot-li">Phone</li>
-                            <li class="foot-li li3"><a class="foot-a" href="">0172 29 70 873</a></li>
+                            <li class="foot-li li3"><a class="foot-a" href="tel:0172 29 70 873">0172 29 70 873</a></li>
                         </ul>
                     </div>
                 </div>
