--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
     <header class="header">
         <nav class="top-nav">
             <div class="logo">
-                <a href="https://aditya1996raj.github.io/ratio/"><img class="logo-com" src="image/ratio-logo.png" alt=""></a>
+                <a href="https://aditya1996raj.github.io/ratiocinative/"><img class="logo-com" src="image/ratio-logo.png" alt=""></a>
             </div>
             <div class="toggle">
                 <i class="fa fa-bars menu-toggle" aria-hidden="true"></i>
             </div>
             <div class="menu">
                 <ul class="menu-ul">
-                    <li class="menu-li"><a class="menu-a" href="https://aditya1996raj.github.io/ratio/">About</a></li>
+                    <li class="menu-li"><a class="menu-a" href="https://aditya1996raj.github.io/ratiocinative/">About</a></li>
                     <li class="menu-li"><a class="menu-a" href="">Projects</a></li>
                     <li class="menu-li"><a class="menu-a menu-color" href="https://aditya1996raj.github.io/careers/">Careers</a></li>
                 </ul>
@@ -369,7 +369,7 @@
         <div class="container">
             <div class="flex">
                 <div class="foot-logo">
-                    <a href="https://aditya1996raj.github.io/ratio/"><img src="image/ratio-logo copy.png" alt=""></a>
+                    <a href="https://aditya1996raj.github.io/ratiocinative/"><img src="image/ratio-logo copy.png" alt=""></a>
                 </div>
                 <div class="foot-menu">
                     <div class="foot">
