--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
         
         for (i = 0; i < acc.length; i++) {
           acc[i].addEventListener("click", function() {
-            this.classList.toggle("active");
+            this.classList.toggle("active-now");
             var panel = this.nextElementSibling;
             if (panel.style.display === "flex") {
               panel.style.display = "none";
