--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="banner-content">
                 <div class="banner-text">
                     <h5 class="banner-h5">Your passion begins here, at ratiocinative solutions!</h5>
-                    <h1 class="banner-h1">Hirring People Who have <br>the Ambition to Make a <br> Dent in the Universe</h1>
+                    <h1 class="banner-h1">Hiring People Who have <br>the Ambition to Make a <br> Dent in the Universe</h1>
                     <p class="banner-p">We work with specific purposes and intended <br>results in mind. <b>Come be a part of it!</b></p>
                 </div>
                 <div class="banner-img">
