--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                                 </div>
                             </a>
                         </li>
-                        <li class="job-li">
+                        <li class="job-li job-3">
                             <a class="job-li-a" href="https://aditya1996raj.github.io/ratio-senior/">
                                 <div class="list1">
                                     <div class="job1">
@@ -119,7 +119,7 @@
                                 </div>
                             </a>
                         </li>
-                        <li class="job-li">
+                        <li class="job-li job-3">
                             <a class="job-li-a" href="https://aditya1996raj.github.io/ratio-senior/">
                                 <div class="list1">
                                     <div class="job1">
@@ -155,7 +155,7 @@
                                 </div>
                             </a>
                         </li>
-                        <li class="job-li">
+                        <li class="job-li job-3">
                             <a class="job-li-a" href="https://aditya1996raj.github.io/ratio-senior/">
                                 <div class="list1">
                                     <div class="job1">
@@ -201,7 +201,7 @@
                                 </div>
                             </a>
                         </li>
-                        <li class="job-li">
+                        <li class="job-li job-3">
                             <a class="job-li-a" href="https://aditya1996raj.github.io/ratio-PHP/">
                                 <div class="list1">
                                     <div class="job1">
@@ -250,7 +250,7 @@
                                 </div>
                             </a>
                         </li>
-                        <li class="job-li">
+                        <li class="job-li job-3">
                             <a class="job-li-a" href="https://aditya1996raj.github.io/ratio-frontend/">
                                 <div class="list1">
                                     <div class="job1">
@@ -324,7 +324,7 @@
                                 </div>
                             </a>
                         </li>
-                        <li class="job-li">
+                        <li class="job-li job-3">
                             <a href="https://aditya1996raj.github.io/ratio-senior/">
                                 <div class="list1">
                                     <div class="job1">
