--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                 </div>
             </div>
             <div class="frontend">     
-                <button class="accordion third job-h4">Front End Wed Devloper</button>
+                <button class="accordion third job-h4">Front-end Web Developer</button>
                 <!-- <a class="open-a" href="#">6 Openings</a> -->
                 <div class="panel">
                     <ul class="job-ul">
