--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                             <a class="job-li-a" href="https://aditya1996raj.github.io/ratio-frontend/">
                                 <div class="list1">
                                     <div class="job1">
-                                        <h6 class="job-h6 job-2 end-three">Excellent Communication skill.</h6>
+                                        <h6 class="job-h6 job-2 end-three">Excellent Communication Skills.</h6>
                                         <div class="area">
                                             <p class="job-p">Mohali, Punjab | full time <i class="fa fa-arrow-right arrow-right" aria-hidden="true"></i></p>
                                         </div>
