--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
 <body style="max-width: 1920px; margin: 0 auto;">
     <header class="header">
         <nav class="nav">
+            <div class="nav-inner">
             <div class="logo">
-                <a href="https://aditya1996raj.github.io/ratiocinative/"><img src="image/ratio-logo.png" alt=""></a>
+                <a href="https://aditya1996raj.github.io/ratiocinative/"><img src="image/ratio-logo copy.png" alt=""></a>
             </div>
             <div class="toggle">
                 <i class="fa fa-bars menu-toggle" aria-hidden="true"></i>
@@ -23,10 +24,11 @@
             <div id="mainListDiv" class="main_list">
                 <ul class="menu-ul">
                     <li class="menu-li"><a class="menu-a" href="https://aditya1996raj.github.io/ratiocinative/">About</a></li>
-                    <li class="menu-li"><a class="menu-a" href="">Projects</a></li>
-                    <li class="menu-li"><a class="menu-a menu-color" href="https://aditya1996raj.github.io/careers/">Careers</a></li>
+                    <li class="menu-li"><a class="menu-a" href="#">Projects</a></li>
+                    <li class="menu-li"><a class="menu-a" href="https://aditya1996raj.github.io/careers/">Careers</a></li>
                 </ul>
             </div>
+        </div>
         </nav>
     </header>
     <section class="banner">
