--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class="header">
         <nav class="nav">
             <div class="logo">
-                <a href="https://aditya1996raj.github.io/ratiocinative/"><img src="image/ratio-logo copy.png" alt=""></a>
+                <a href="https://aditya1996raj.github.io/ratiocinative/"><img src="image/ratio-logo.png" alt=""></a>
             </div>
             <div class="toggle">
                 <i class="fa fa-bars menu-toggle" aria-hidden="true"></i>
