--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <ul class="menu-ul">
                     <li class="menu-li"><a class="menu-a" href="https://aditya1996raj.github.io/ratiocinative/">About</a></li>
                     <li class="menu-li"><a class="menu-a" href="#">Projects</a></li>
-                    <li class="menu-li"><a class="menu-a" href="https://aditya1996raj.github.io/careers/">Careers</a></li>
+                    <li class="menu-li"><a class="menu-a menu-color" href="https://aditya1996raj.github.io/careers/">Careers</a></li>
                 </ul>
             </div>
         </nav>
