--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                             <a class="job-li-a" href="https://aditya1996raj.github.io/ratio-PHP/">
                                 <div class="list1">
                                     <div class="job1">
-                                        <h6 class="job-h6 php-one">Core PHP, Zend Framework, code-Igniter, Word Press Customization</h6>
+                                        <h6 class="job-h6 php-one">Core PHP, Zend Framework, Code-Igniter, Word Press Customization</h6>
                                         <div class="area">
                                             <p class="job-p">Mohali, Punjab | full time <i class="fa fa-arrow-right arrow-right" aria-hidden="true"></i></p>
                                         </div>
