--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                                     <div class="job1">
                                         <h6 class="job-h6 job-2 ui-one">Meet with clients or the art director to determine the scope of a project</h6>
                                         <div class="area">
-                                            <p class="job-p">Mohali, Punjab | full time <i class="fa fa-arrow-right arrow-right" aria-hidden="true"></i></p>
+                                            <p class="job-p">Mohali, Punjab | full time <img src="image/job-arrow.png" class="arrow-right" alt=""></p>
                                         </div>
                                     </div>
                                 </div>
@@ -77,7 +77,7 @@
                                     <div class="job1">
                                         <h6 class="job-h6 job-2 ui-two">Advise clients on strategies to reach a particular audience</h6>
                                         <div class="area">
-                                            <p class="job-p">Mohali, Punjab | full time <i class="fa fa-arrow-right arrow-right" aria-hidden="true"></i></p>
+                                            <p class="job-p">Mohali, Punjab | full time <img src="image/job-arrow.png" class="arrow-right" alt=""></p>
                                         </div>
                                     </div>
                                 </div>
@@ -98,7 +98,7 @@
                                     <div class="job1">
                                         <h6 class="job-h6 php-one">Core PHP, Zend Framework, Code-Igniter, Word Press Customization</h6>
                                         <div class="area">
-                                            <p class="job-p">Mohali, Punjab | full time <i class="fa fa-arrow-right arrow-right" aria-hidden="true"></i></p>
+                                            <p class="job-p">Mohali, Punjab | full time <img src="image/job-arrow.png" class="arrow-right" alt=""></p>
                                         </div>
                                     </div>
                                 </div>
@@ -111,7 +111,7 @@
                                         <h6 class="job-h6 job-2 php-two">JavaScript: JQuery, JSON, Prototype</h6>
             
                                         <div class="area">
-                                            <p class="job-p">Mohali, Punjab | full time <i class="fa fa-arrow-right arrow-right" aria-hidden="true"></i></p>
+                                            <p class="job-p">Mohali, Punjab | full time <img src="image/job-arrow.png" class="arrow-right" alt=""></p>
                                         </div>
                                     </div>
                                 </div>
@@ -123,7 +123,7 @@
                                     <div class="job1">
                                         <h6 class="job-h6 job-2 php-three">Database:mySQL</h6>
                                         <div class="area">
-                                            <p class="job-p">Mohali, Punjab | full time <i class="fa fa-arrow-right arrow-right" aria-hidden="true"></i></p>
+                                            <p class="job-p">Mohali, Punjab | full time <img src="image/job-arrow.png" class="arrow-right" alt=""></p>
                                         </div>
                                     </div>
                                 </div>
@@ -144,7 +144,7 @@
                                     <div class="job1">
                                         <h6 class="job-h6 job-2 end-one">Experience in WordPress.</h6>
                                         <div class="area">
-                                            <p class="job-p">Mohali, Punjab | full time <i class="fa fa-arrow-right arrow-right" aria-hidden="true"></i></p>
+                                            <p class="job-p">Mohali, Punjab | full time <img src="image/job-arrow.png" class="arrow-right" alt=""></p>
                                         </div>
                                     </div>
                                 </div>
@@ -156,7 +156,7 @@
                                     <div class="job1">
                                         <h6 class="job-h6 job-2 end-two">Coding valid XHTML and CSS Mark-up.</h6>
                                         <div class="area">
-                                            <p class="job-p">Mohali, Punjab | full time <i class="fa fa-arrow-right arrow-right" aria-hidden="true"></i></p>
+                                            <p class="job-p">Mohali, Punjab | full time <img src="image/job-arrow.png" class="arrow-right" alt=""></p>
                                         </div>
                                     </div>
                                 </div>
@@ -168,7 +168,7 @@
                                     <div class="job1">
                                         <h6 class="job-h6 job-2 end-three">Excellent Communication skills.</h6>
                                         <div class="area">
-                                            <p class="job-p">Mohali, Punjab | full time <i class="fa fa-arrow-right arrow-right" aria-hidden="true"></i></p>
+                                            <p class="job-p">Mohali, Punjab | full time <img src="image/job-arrow.png" class="arrow-right" alt=""></p>
                                         </div>
                                     </div>
                                 </div>
@@ -180,7 +180,7 @@
                                     <div class="job1">
                                         <h6 class="job-h6 job-2 end-four">Excellent HTML,XHTML,CSS Programming Skills.</h6>
                                         <div class="area">
-                                            <p class="job-p">Mohali, Punjab | full time <i class="fa fa-arrow-right arrow-right" aria-hidden="true"></i></p>
+                                            <p class="job-p">Mohali, Punjab | full time <img src="image/job-arrow.png" class="arrow-right" alt=""></p>
                                         </div>
                                     </div>
                                 </div>
@@ -200,7 +200,7 @@
                                     <div class="job1">
                                         <h6 class="job-h6 job-2 qa-first">QA Tester should assess software quality through manual and automated testing.</h6>
                                         <div class="area">
-                                            <p class="job-p">Mohali, Punjab | full time <i class="fa fa-arrow-right arrow-right" aria-hidden="true"></i></p>
+                                            <p class="job-p">Mohali, Punjab | full time <img src="image/job-arrow.png" class="arrow-right" alt=""></p>
                                         </div>
                                     </div>
                                 </div>
@@ -212,7 +212,7 @@
                                     <div class="job1">
                                         <h6 class="job-h6 job-2 qa-two">Should have a keen eye for detail and excellent communication skills.</h6>
                                         <div class="area">
-                                            <p class="job-p">Mohali, Punjab | full time <i class="fa fa-arrow-right arrow-right" aria-hidden="true"></i></p>
+                                            <p class="job-p">Mohali, Punjab | full time <img src="image/job-arrow.png" class="arrow-right" alt=""></p>
                                         </div>
                                     </div>
                                 </div>
@@ -224,7 +224,7 @@
                                     <div class="job1">
                                         <h6 class="job-h6 qa-three">If you are also competent in executing test cases and are passionate about quality, we’d like to meet you.</h6>
                                         <div class="area">
-                                            <p class="job-p">Mohali, Punjab | full time <i class="fa fa-arrow-right arrow-right" aria-hidden="true"></i></p>
+                                            <p class="job-p">Mohali, Punjab | full time <img src="image/job-arrow.png" class="arrow-right" alt=""></p>
                                         </div>
                                     </div>
                                 </div>
